--- a/Tradovate.WebSocket/Tradovate.WebSocket.csproj
+++ b/Tradovate.WebSocket/Tradovate.WebSocket.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PresentationFramework">
+      <HintPath>..\..\..\..\..\.dotnet\shared\Microsoft.WindowsDesktop.App\7.0.3\PresentationFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Tradovate.MarketData.Services">
       <HintPath>..\services-md-api\src\Tradovate.MarketData.Services\bin\Debug\Tradovate.MarketData.Services.dll</HintPath>
     </Reference>
